fix: harden gateway and AI admin flows
Tighten gateway auth headers and AI admin trust boundaries so admin identity and AI channel secrets are no longer client-controlled or leaked.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>